tests/fixtures/positive/style/ForbiddenNamedParam.kt
package style

fun example(value: Int) {
    require(value = value > 0)
    check(value = value != -1)
}
